# tinyscheme

./: .gitignore  CMakeLists.txt  init.scm  json.scm  opdefines.h  package.json  repl.c  scheme-private.h  scheme.c  scheme.h  test.c
include/: scheme.h
libs/: init.scm  start-tiny.scm  tinymodules.scm
source/: scheme.c
test/: repl.c  test.c
